--- a/meteor-ios-starter-swift.xcodeproj/xcshareddata/xcschemes/meteor-ios-starter-swift.xcscheme
+++ b/meteor-ios-starter-swift.xcodeproj/xcshareddata/xcschemes/meteor-ios-starter-swift.xcscheme
@@ -21,11 +21,11 @@
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForTesting = "NO"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "AACB3A581B1593750069C70A"
@@ -42,16 +42,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "AACB3A581B1593750069C70A"
-               BuildableName = "meteor-ios-starter-swiftTests.xctest"
-               BlueprintName = "meteor-ios-starter-swiftTests"
-               ReferencedContainer = "container:meteor-ios-starter-swift.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
